# minpack

./: CMakeLists.txt  README.md  README.rst
examples/: CMakeLists.txt  example_hybrd.f90  example_hybrd1.f90  example_lmder1.f90  example_lmdif1.f90  example_primes.f90
src/: CMakeLists.txt  chkder.f  dogleg.f  enorm.f  errjac.f  fdjac1.f  fdjac2.f  grdfcn.f  hesfcn.f  hybipt.f  hybrd.f  hybrj.f  lhesfcn.f  lmder.f  lmdif.f  lmdipt.f  lmpar.f  lmstr.f  minpack.f90  objfcn.f  ocpipt.f  qrfac.f  r1updt.f  ssqfcn.f  ssqjac.f  vecfcn.f  vecjac.f
